# agentscope

./: ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
splunk_app/default/: app.conf  savedsearches.conf
splunk_app/default/data/ui/views/: agentscope.xml
src/agentscope/: __init__.py  __main__.py  events.py  instrument.py  splunk_sink.py
tests/: test_instrument.py
