[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentscope"
version = "0.1.0"
description = "Every AI agent tool call observable in Splunk — drop-in instrumentation for Claude Code, Cursor, Codex."
authors = [{ name = "Masoud Masoori", email = "masoud.masoori@mas-ai.co" }]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.11"

# Pinned exact per operator's npm safety policy (D:/Claude-Coworker/OPERATOR-PROFILE.md)
dependencies = [
    "httpx==0.28.1",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]
splunk = [
    "splunk-sdk==2.0.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
